<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background_app">

    <LinearLayout
        android:id="@+id/layoutIniciarSesion"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="60dp"
            android:background="@drawable/layout_background"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/IniciarSesion"
                android:textColor="@color/letras"
                android:textSize="20dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etEmailLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="60dp"
                android:layout_marginRight="20dp"
                android:drawableLeft="@drawable/email_outline"
                android:drawablePadding="15dp"
                android:ems="10"
                android:hint="@string/Email"
                android:inputType="textEmailAddress"
                android:paddingLeft="10dp"
                android:paddingBottom="20dp" />

            <EditText
                android:id="@+id/etContrasenaLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:drawableLeft="@drawable/lock"
                android:drawablePadding="15dp"
                android:ems="10"
                android:hint="@string/Contrasena"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:paddingBottom="20dp" />

            <CheckBox

                android:id="@+id/cbRecordarDatos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:text="@string/Recordardatos" />

            <Button
                android:id="@+id/bRecupearContrasena"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@color/float_transparent"
                android:text="Recuperar Contraseña" />

            <ImageButton
                android:id="@+id/bInicioSesion"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="end"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="25dp"
                android:background="@drawable/button_background"
                android:src="@drawable/ic_arrow_forward_black_24dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp"
                    android:text="@string/Cuenta"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/bRegistrarIni"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="40dp"
                    android:background="@drawable/button_background"
                    android:text="@string/registrarse"
                    android:textColor="@android:color/white" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutRegistrar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/layout_background"
        android:orientation="vertical"
        tools:visibility="visible">
        <TextView
            android:id="@+id/tvBienvenidoReg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/ingrese"
            android:textColor="@color/letras"
            android:textSize="20dp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="341dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/etNombreReg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="20dp"
                    android:drawableLeft="@drawable/account_reg"
                    android:drawablePadding="15dp"
                    android:ems="10"
                    android:hint="@string/nombre"
                    android:paddingLeft="10dp"
                    android:paddingBottom="20dp" />

                <EditText
                    android:id="@+id/etApellidosReg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:drawableLeft="@drawable/account_multiple"
                    android:drawablePadding="15dp"
                    android:ems="10"
                    android:hint="@string/apellidos"
                    android:paddingLeft="10dp"
                    android:paddingBottom="20dp" />

                <EditText
                    android:id="@+id/etEmailReg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:drawableLeft="@drawable/email_outline"
                    android:drawablePadding="15dp"
                    android:ems="10"
                    android:hint="@string/Email"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="10dp"
                    android:paddingBottom="20dp" />

                <EditText
                    android:id="@+id/etContrasenaReg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:drawableLeft="@drawable/lock"
                    android:drawablePadding="15dp"
                    android:ems="10"
                    android:hint="@string/Contrasena"
                    android:inputType="textPassword"
                    android:paddingLeft="10dp"
                    android:paddingBottom="20dp" />

                <EditText
                    android:id="@+id/etContrasenaVerifReg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:drawableLeft="@drawable/lock_check"
                    android:drawablePadding="15dp"
                    android:ems="10"
                    android:hint="@string/Verificar"
                    android:inputType="textPassword"
                    android:paddingLeft="10dp"
                    android:paddingBottom="20dp" />

                <EditText
                android:id="@+id/et_dni_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/Dni"
                android:drawableLeft="@drawable/card_account_details"
                android:drawablePadding="15dp"
                android:paddingLeft="10dp"
                android:paddingBottom="20dp"/>
                <EditText
                    android:id="@+id/et_peso_reg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:hint="@string/peso"
                    android:drawableLeft="@drawable/kilogram"
                    android:drawablePadding="15dp"
                    android:paddingLeft="10dp"
                    android:paddingBottom="20dp"/>

                <EditText
                    android:id="@+id/et_altura_reg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:hint="@string/altura"
                    android:drawableLeft="@drawable/human_male_height"
                    android:drawablePadding="15dp"
                    android:paddingLeft="10dp"
                    android:paddingBottom="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical">


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/grey" />
            </LinearLayout>

                <TextView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nivel"
                    android:textColor="@color/negro"
                    android:textSize="8dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Dominadas"
                        android:textColor="@color/letras"
                        android:textSize="13sp" />

                    <EditText
                        android:id="@+id/etDominadas_reg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="numberSigned" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="15dp"
                        android:background="@color/grey" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/PressBanca"
                        android:textColor="@color/letras"
                        android:textSize="13sp" />

                    <EditText
                        android:id="@+id/etPressbanca_reg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="numberDecimal" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="15dp"
                        android:background="@color/grey" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/MinTiempo"
                        android:textColor="@color/letras"
                        android:textSize="13sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/minutos"
                            android:gravity="center"
                            />

                        <EditText
                            android:id="@+id/etminutos_reg"
                            android:layout_width="40dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ems="10"
                            android:inputType="numberSigned" />

                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/segundos"
                            android:gravity="center"/>

                        <EditText
                            android:id="@+id/etsegundos_reg"
                            android:layout_width="40dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:ems="10"
                            android:inputType="number" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="15dp"
                        android:background="@color/grey" />
                </LinearLayout>


            </LinearLayout>

        </ScrollView>

        <ImageButton
            android:id="@+id/bRegistrar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/button_background"
            android:src="@drawable/ic_arrow_forward_black_24dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="80dp"
                android:text="@string/SiCuenta"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/bIniciarSesion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/button_background"
                android:text="@string/IniciarSesion"
                android:textColor="@android:color/white" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>